--- a/notebook/2020-07-24-szdb/2020-07-24-szdb.ipynb
+++ b/notebook/2020-07-24-szdb/2020-07-24-szdb.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -34,14 +34,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CNVs from 77 studies\n",
+    "## CNVs\n",
+    "###  From the szdb based on 77 studies\n",
     "\n",
-    "The location of the CNVs implicated in schizophrenia is given in terms of cytogenic bands."
+    "The location of the CNVs implicated in schizophrenia is given in terms of cytogenic bands.  Source URL:\n",
+    "\n",
+    "http://www.szdb.org/download/CNV.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,14 +74,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cytoband info for hg19/GRCh37\n",
+    "### Cytoband mapping for hg19\n",
+    "Mapping between cytobands and nucleotide base positions for hg19/GRCh37\n",
     "\n",
-    "https://hgdownload.cse.ucsc.edu/goldenpath/hg19/database/cytoBand.txt.gz"
+    "https://hgdownload.cse.ucsc.edu/goldenpath/hg19/database/cytoBand.txt.gz\n",
+    "\n",
+    "First I extend the mapping with GRCh37 style contig names and index the DataFrame."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -232,32 +238,50 @@
        "[862 rows x 6 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "hgcb = pd.read_csv('/big/data/refgenome/GRCh37/cytoBand.tsv', sep='\\t')\n",
+    "# 'chromosome' column will hold contig names in GRCh37 style\n",
     "hgcb['chromosome'] = [c.replace('chr', '') for c in hgcb['chr']]\n",
+    "# Index with tuples.  Multiindex might be better.\n",
     "hgcb.index = [(c.replace('chr', ''), n) for c, n in zip(hgcb['chr'], hgcb['name'])] \n",
     "hgcb"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comparing the set of cytobands used in `CNV` (from szdb) to those in `hgcb` (from the hg19 bundle):"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
-    "set_bgcb = set(hgcb.index)\n",
+    "set_hgcb = set(hgcb.index)\n",
     "set_CNV_start = set(list(zip(CNV['chromosome'], CNV['start cytoband'])))\n",
     "set_CNV_end = set(list(zip(CNV['chromosome'], CNV['end cytoband'])))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the previous code chunck `set_hgcb` is the set of cytoband names in `hgcb`. `set_CNV_starts` and `set_CNV_end` are the set of cytoband names that define the *start* and *end* of some schizophrenia related CNV, respectively.\n",
+    "\n",
+    "Both `set_CNV_start` and `set_CNV_end` contain cytoband names that are missing from `set_hgcb`. The following code shows that the same names are missing for `set_CNV_start` as for `set_CNV_end`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -266,18 +290,25 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "set_CNV_start - set_bgcb == set_CNV_end - set_bgcb"
+    "set_CNV_start - set_hgcb == set_CNV_end - set_hgcb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I refer the missing names as *incorrect*.  The incorrect names are as follows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +336,7 @@
        " ('3', 'p21')]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,8 +347,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By inspecting `hgcb` it turns out that the incorrect cytobands are all composed of multiple, more finely divided sub-cytobands.  So to correct each incorrect name I take the start (5') and end (3') member of its sub-cytobands from `hgcb`.  I will enter these semi-manually into the `corr start` and `corr end` columns of the following data frame."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,8 +365,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These functions will make manual data entry easier"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -442,27 +487,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Int64Index([759, 957], dtype='int64')"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "CNV.index[[748, 943]]"
+    "ix_to_drop = CNV.index[[748, 943]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -471,13 +505,13 @@
        "Int64Index([760, 959], dtype='int64')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "CNV.drop(index=CNV.index[[748, 943]], inplace=True)\n",
+    "CNV.drop(index=ix_to_drop, inplace=True)\n",
     "CNV.index[[748, 943]]"
    ]
   },
